# cpp-actor

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  ping_pong.cpp
include/: actor.h  actor_system.h  message.h
src/: actor.cpp  actor_system.cpp  main.cpp
